syntax = "proto3";
package pb;
option go_package = "github.com/vancelongwill/_examples/fullproto/pb";
//option go_package = ".;./pb";

import "google/protobuf/timestamp.proto";

message OrderCreated {
  string order_id = 1;
  google.protobuf.Timestamp at = 2;
  int32 version = 3;
  string user_id = 4;
}

message OrderShipped {
  string order_id = 1;
  google.protobuf.Timestamp at = 2;
  int32 version = 3;
  string destination = 4;
}

message OrderCancelled {
  string order_id = 1;
  google.protobuf.Timestamp at = 2;
  int32 version = 3;
  string cancel_reason = 4;
}
